static/css/theme.css
/* ============================================================ */
/* Global Styles */
@font-face {
    font-family: 'Quicksand';
    src: url('/static/fonts/Quicksand-Light.ttf');
}

* {
    font-family: 'Quicksand';
}

html, body {
    padding: 0;
    margin: 0;
    background-color: #161819;
}

a {
    color: #c3e791;
    width: 100%;
    padding: 15px;
    box-sizing: border-box;
}

a:focus{
    outline: 1px dashed #86c232;
}

h1, h2, h3, h4, h5 {
    margin-bottom: 0px;
}

h1 {
    font-size: 3em;
}

h2 {
    font-size: 2.5em;
}

h3 {
    font-size: 2em;
}

li {
    margin-bottom: 20px;
}

li, a, span, p {
    font-size: 1.3em;
}

button{
    padding: 15px;
    color: #c3e791;
    background-color: #161819;
    border: 1px solid #86c232;
    font: 'Ubuntu';
    font-size: 1.3em;
    width: 100%;
    box-sizing: border-box;
}

button:focus{
    outline: 1px dashed #fff;
}
/* ============================================================ */

/* ============================================================ */
/* Table of Contents */
#table-of-contents {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

#table-of-contents a, #table-of-contents li {
    font-size: 1.1em;
}
/* ============================================================ */

/* ============================================================ */
/* Footer */
#footer {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    text-align: center;
    padding: 30px 0px 30px 0px;
    background-color: #161819;
}
/* ============================================================ */

/* ============================================================ */
/* Content */
#content-column {
    width: 60%;
    margin: 0 auto;
    border-left: 5px solid #86c232;
    border-right: 5px solid #86c232;
    color: #AAAEB3;
    margin-bottom: 50px;
}

.content-container {
    background-color: #222629;
    padding-left: 20px;
    padding-right: 20px;
    box-sizing: content-box;
    overflow: auto;
    margin-bottom: 40px;
    padding-bottom: 20px;
    padding-top: 15px;
}

#last-container {
    padding-bottom: 50px;
    margin-bottom: 0px !important;
}

#first-container{
    padding-bottom: 30px;
}
/* ============================================================ */

/* ============================================================ */
/* Other */
.icon-link {
    color: #222629;
    text-decoration: none;
}

.divider{
    width: 100%;
    height: 2px;
    display: block;
    background-color: #566441;
    margin-top: 50px;
    margin-bottom: 50px;
}

.bottom-link{
    margin-bottom: 20px;
    display: block;
}
/* ============================================================ */

/* ============================================================ */
/* Media Queries */
@media screen and (max-width: 1200px) and (min-width: 901px){
    #content-column {
        width: 75%;
    }
}

@media screen and (max-width: 900px) and (min-width: 701px){
    #content-column{
        width: 85%;
    }

    .content-container{
        padding-left: 15px;
        padding-right: 15px;
    }
}

@media screen and (max-width: 700px){
    #content-column{
        width: 90%;
    }

    .content-container{
        padding-left: 10px;
        padding-right: 10px;
    }
}
/* ============================================================ */

